one.yml
 # balram deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: balram-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: user-app
          image: ashleybarrett/node-hello-world
          ports:
            - containerPort: 8080
---
# balram service.yaml
apiVersion: v1
kind: Service
metadata:
  name: balram-app-service
spec:
  selector:
    app: test-app
  ports:
  - port: 9080
    targetPort: 8080
  type: LoadBalancer
